<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:onClick="goBack"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="50px"
        android:translationX="10px"
        android:translationY="150px"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="89dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:text="@string/info1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:text="@string/info2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:text="@string/info3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:text="@string/info4"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>